# core-webapp

./: Cargo.toml  README.md  dfx.json  did.sh  package-lock.json  package.json  tsconfig.json
src/backend/hush/: Cargo.toml  hush.did
src/backend/hush/src/: constant.rs  lib.rs  state.rs  types.rs
src/backend/reclaim_verifier_unofficial/: Cargo.toml  reclaim_verifier_unofficial.did
src/backend/reclaim_verifier_unofficial/src/: lib.rs  reclaim.rs  state.rs
src/backend/recovery/aadhaar_digital_zk_verifier/: Cargo.toml  aadhaar_digital_zk_verifier.did
src/backend/recovery/aadhaar_digital_zk_verifier/src/: constant.rs  lib.rs  zk.rs
src/backend/recovery/dkim_email_verifier/: Cargo.toml  dkim_email_verifier.did
src/backend/recovery/dkim_email_verifier/src/: lib.rs  storage.rs  types.rs  util.rs
src/backend/recovery/github_oauth_verifier/: Cargo.toml
src/backend/recovery/github_oauth_verifier/src/: lib.rs
src/backend/storage/: Cargo.toml  storage.did
src/backend/storage/src/: constant.rs  cryptography.rs  lib.rs  state.rs  types.rs
src/backend/system_api/: Cargo.toml
src/backend/system_api/src/: lib.rs
src/hush-web-app-backend/: Cargo.toml
src/hush-web-app-frontend/: index.html  package.json  tailwind.config.js  tsconfig.json  vite.config.js
src/hush-web-app-frontend/src/: App.jsx  App.tsx  index.css  main.jsx
src/hush-web-app-frontend/src/components/dashbaord/: SecretList.tsx
src/hush-web-app-frontend/src/components/icons/: CheckIcon.tsx
src/hush-web-app-frontend/src/components/recovery-forms/: aadhar-zk-form.tsx  email-dkim-form.tsx
src/hush-web-app-frontend/src/components/ui/: badge-checkbox.tsx  button.tsx  card.tsx  multi-select.tsx
src/hush-web-app-frontend/src/lib/: constant.ts  theme.ts  utils.ts
src/hush-web-app-frontend/src/lib/hooks/: useFetchSecrets.ts
src/hush-web-app-frontend/src/lib/store/: user-store.ts
src/hush-web-app-frontend/src/lib/types/: ic_vetkd_utils.d.ts
src/hush-web-app-frontend/src/pages/: Dashboard.tsx  Home.tsx
src/hush-web-app-frontend/src/pages/Dashboard/: index.tsx  navbar.tsx  secret-list.tsx
src/hush-web-app-frontend/src/pages/Home/: index.tsx  username-card.tsx
