[package]
name = "reclaim_verifier_unofficial"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html



[lib]
crate-type = ["cdylib"]

[dependencies]
candid = "0.10"
ic-cdk = "0.13"
ic-cdk-timers = "0.7" # Feel free to remove this dependency if you don't need timers
ic-stable-structures = "0.6.5"
serde = "1"

sha2 = {version = "0.10.6", default-features = false}
sha3 = { version = "0.10.8",  default-features = false}
hex = {version = "0.4.3", default-features = false, features=["alloc"]}
ecdsa = {version = "0.16.9", default-features = false}
keccak-hash = {version = "0.10.0", default-features = false}

k256 = {version = "0.13.3", default-features = false, features = ["ecdsa-core", "ecdsa", "sha256","schnorr"]}
rand_core ={version = "0.6.4", default-features = false}
digest = {version = "0.10", default-features = false }
