[package]
name = "system_api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
candid = "0.8.4"
ic-cdk = "0.7.1"
serde = "1"
ic-crypto-internal-bls12-381-vetkd = { git = "https://github.com/dfinity/ic",tag = "release-2024-04-24_23-01-base" }
ic-crypto-internal-bls12-381-type = { git = "https://github.com/dfinity/ic" ,tag = "release-2024-04-24_23-01-base"}
rand_chacha = "0.3"
lazy_static = "1.4"
hex = "0.4"
getrandom = { version = "0.2", features = ["custom"] }