[package]
name = "github_oauth_verifier"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
candid = "0.10"
ic-cdk = "0.13"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3.3"